--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Roboto, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -24,10 +24,12 @@ a:hover {
 
 body {
   margin: 0;
+  padding: 50px;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  
 }
 
 h1 {
